# Reelix

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs
Ask-for-typs/: README.md
src/: main.rs
ui/: ComboBoxScroll.slint  RadioButton.slint  appwindow.slint  globale.slint  logics.slint  side_bar.slint
ui/pages/: about_page.slint  analyzes_page.slint  categories_page.slint  pages.slint  record_page.slint  request_page.slint  settings_page.slint  statistics_page.slint
