[package]
name = "combobox-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
slint = { version = "1.5.1", features = ["gettext"] }
mysql = "25.0.0"
lazy_static = "1.4.0"

[build-dependencies]
slint-build = "1.5.1"

