[package]
name = "reelix"
version = "0.0.2"
authors = ["jan-peter.friebe@uni-bamberg.de"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.6.0" }
mysql = "25.0.0"
lazy_static = "1.4.0"
open = "5.1.2"

[build-dependencies]
slint-build = "1.6.0"
